tests-build/tests/fail/macros_invalid_input.stderr
error: the `async` keyword is missing from the function declaration
 --> tests/fail/macros_invalid_input.rs:6:1
  |
6 | fn main_is_not_async() {}
  | ^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`, `crate`, `unhandled_panic`.
 --> tests/fail/macros_invalid_input.rs:8:15
  |
8 | #[tokio::main(foo)]
  |               ^^^

error: Must have specified ident
  --> tests/fail/macros_invalid_input.rs:11:15
   |
11 | #[tokio::main(threadpool::bar)]
   |               ^^^^^^^^^^^^^^^

error: the `async` keyword is missing from the function declaration
  --> tests/fail/macros_invalid_input.rs:15:1
   |
15 | fn test_is_not_async() {}
   | ^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`, `crate`, `unhandled_panic`.
  --> tests/fail/macros_invalid_input.rs:17:15
   |
17 | #[tokio::test(foo)]
   |               ^^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`, `crate`, `unhandled_panic`
  --> tests/fail/macros_invalid_input.rs:20:15
   |
20 | #[tokio::test(foo = 123)]
   |               ^^^^^^^^^

error: Failed to parse value of `flavor` as string.
  --> tests/fail/macros_invalid_input.rs:23:24
   |
23 | #[tokio::test(flavor = 123)]
   |                        ^^^

error: No such runtime flavor `foo`. The runtime flavors are `current_thread` and `multi_thread`.
  --> tests/fail/macros_invalid_input.rs:26:24
   |
26 | #[tokio::test(flavor = "foo")]
   |                        ^^^^^

error: The `start_paused` option requires the `current_thread` runtime flavor. Use `#[tokio::test(flavor = "current_thread")]`
  --> tests/fail/macros_invalid_input.rs:29:55
   |
29 | #[tokio::test(flavor = "multi_thread", start_paused = false)]
   |                                                       ^^^^^

error: Failed to parse value of `worker_threads` as integer.
  --> tests/fail/macros_invalid_input.rs:32:57
   |
32 | #[tokio::test(flavor = "multi_thread", worker_threads = "foo")]
   |                                                         ^^^^^

error: The `worker_threads` option requires the `multi_thread` runtime flavor. Use `#[tokio::test(flavor = "multi_thread")]`
  --> tests/fail/macros_invalid_input.rs:35:59
   |
35 | #[tokio::test(flavor = "current_thread", worker_threads = 4)]
   |                                                           ^

error: Failed to parse value of `crate` as path.
  --> tests/fail/macros_invalid_input.rs:38:23
   |
38 | #[tokio::test(crate = 456)]
   |                       ^^^

error: Failed to parse value of `crate` as path: "456"
  --> tests/fail/macros_invalid_input.rs:41:23
   |
41 | #[tokio::test(crate = "456")]
   |                       ^^^^^

error: The `unhandled_panic` option requires the `current_thread` runtime flavor. Use `#[tokio::test(flavor = "current_thread")]`
  --> tests/fail/macros_invalid_input.rs:44:58
   |
44 | #[tokio::test(flavor = "multi_thread", unhandled_panic = "shutdown_runtime")]
   |                                                          ^^^^^^^^^^^^^^^^^^

error: second test attribute is supplied, consider removing or changing the order of your test attributes
  --> tests/fail/macros_invalid_input.rs:48:1
   |
48 | #[test]
   | ^^^^^^^

error: second test attribute is supplied, consider removing or changing the order of your test attributes
  --> tests/fail/macros_invalid_input.rs:52:1
   |
52 | #[::core::prelude::v1::test]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: second test attribute is supplied, consider removing or changing the order of your test attributes
  --> tests/fail/macros_invalid_input.rs:56:1
   |
56 | #[core::prelude::rust_2015::test]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: second test attribute is supplied, consider removing or changing the order of your test attributes
  --> tests/fail/macros_invalid_input.rs:60:1
   |
60 | #[::std::prelude::rust_2018::test]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: second test attribute is supplied, consider removing or changing the order of your test attributes
  --> tests/fail/macros_invalid_input.rs:64:1
   |
64 | #[std::prelude::rust_2021::test]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: second test attribute is supplied, consider removing or changing the order of your test attributes
  --> tests/fail/macros_invalid_input.rs:67:1
   |
67 | #[tokio::test]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `tokio::test` (in Nightly builds, run with -Z macro-backtrace for more info)
